--- a/index.html
+++ b/index.html
@@ -672,11 +672,161 @@
         <h1>官网永久发布页</h1>
         <div class="content">
           <div class="content-top">
-            <h2>青山不改，绿水长流，江湖有缘再见！
-              <br />
-              <span style="font-size: 15px;">详细情况请主动咨询</span>
+            <h2 id="checkbrowser">
+              检测到你
             </h2>
 
+            <div id="atweixin" class="text-center text-sm text-red">
+              请截图该二维码，浏览器扫码打开<br />
+              或者<br />
+              点右上角的[ <span style="font-weight: bolder;font-size: 28px;color: black;">···</span> ] <br />
+              然后点，在浏览器打开
+            </div>
+            <ul>
+              <li>
+                <!-- <h3 style="color: red;font-weight: bold;">截图本页，浏览器扫码打开</h3> -->
+                </hr>
+
+                <div style="display: flex;align-content: center;justify-content: center;">
+                  <img alt="官网永久发布页" id="qrcode" style="width: 50%;" />
+                </div>
+              </li>
+              <div id="showContent">
+                <li style="border-top: 2px solid red;border-bottom: 2px solid red;">
+                  <font color="red">付费站注册/忘记密码处</font>
+                  <div class="link">
+                    <div>
+                      <a href="https://www.happywebsite.buzz/#/creator" target="_blank"
+                        style="color:#02a982">付费站忘记密码/注册</a>
+                    </div>
+                    <div class="go"><a href="https://www.happywebsite.buzz/#/creator" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li>
+                  <font color="red">付费内容（主用）</font>
+                  <div class="link">
+                    <div>
+                      <a href="https://www.happywebsite.buzz/#/home/originvideo" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://www.happywebsite.buzz/#/home/originvideo" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li>
+                  <font color="blue">付费内容（备用1）</font>
+                  <div class="link">
+                    <div><a href="https://happywebsite.pages.dev/#/home/originvideo" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happywebsite.pages.dev/#/home/originvideo" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li style="border-bottom:2px solid red ;">
+                  <font color="blue">付费内容（备用2）</font>
+                  <div class="link">
+                    <div><a href="https://happyoriginv.netlify.app/#/home/originvideo" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happyoriginv.netlify.app/#/home/originvideo"
+                        target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+
+                <li>
+                  <font color="OrangeRed">免费内容（主用）</font>
+                  <div class="link">
+                    <div>
+                      <a href="https://www.happywebsite.buzz/#/home/main" target="_blank" style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://www.happywebsite.buzz/#/home/main" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li>
+                  <font color="blue">免费内容（备用1）</font>
+                  <div class="link">
+                    <div>
+                      <a href="https://happywebsite.pages.dev/#/home/main" target="_blank" style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happywebsite.pages.dev/#/home/main" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+                </li>
+
+                <li>
+                  <font color="blue">免费内容（备用2）</font>
+                  <div class="link">
+                    <div>
+                      <a href="https://happyoriginv.netlify.app/#/home/main" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happyoriginv.netlify.app/#/home/main" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+                </li>
+
+
+                <!-- <li>
+                  <font color="red">免费V（主用）</font>
+                  <div class="link">
+                    <div>
+                      <a href="https://www.happywebsite.buzz/onlineFreeV.html" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://www.happywebsite.buzz/onlineFreeV.html" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li>
+                  <font color="blue">免费V（备用1）</font>
+                  <div class="link">
+                    <div><a href="https://happywebsite.pages.dev/onlineFreeV" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happywebsite.pages.dev/onlineFreeV" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li style="border-bottom:2px solid red ;">
+                  <font color="blue">免费V（备用2）</font>
+                  <div class="link">
+                    <div><a href="https://happyoriginv.netlify.app/onlineFreeV" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happyoriginv.netlify.app/onlineFreeV" target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
+                 -->
+              </div>
+              <li>
+                <h3 style="color: red;font-weight: bold;">温馨提示</h3>
+                <span style="color: blank;font-weight: bold;">1.使用浏览器打开本网页并收藏（重要）</span>
+                <span>2.付费内容的用到的<strong style="color: blank;font-weight: bold;">魔法工具</strong>主动问</span>
+                <span>3.都不要在微信直接点进去</span>
+
+              </li>
+
+            </ul>
           </div>
         </div>
         <p class="footer">© 2023 HAPPYWEBORIGIN. All Rights Reserved</p>
@@ -697,6 +847,12 @@
     } else {
       atweixin.innerText = "";
     }
+  </script>
+  <script>
+    // document.getElementById('qrcode').setAttribute('src', 'https://www.dmxq.net/?qrcode=' + window.location);
+    // document.getElementById('qrcode').setAttribute('src', 'https://api.isoyu.com/qr/?m=0&e=L&p=10&url=' + window.location);
+    // document.getElementById('qrcode').setAttribute('src', 'https://api.qrserver.com/v1/create-qr-code/?size=200%C3%97200&margin=10&data=' + window.location);
+    document.getElementById('qrcode').setAttribute('src', 'https://telegraph-image-drl.pages.dev/file/9f293bbd8413398e2fba5.png');
   </script>
 
 </body>
