--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                 </hr>
 
                 <div style="display: flex;align-content: center;justify-content: center;">
-                  <img alt="官网永久发布页" id="qrcode" style="width: 50%;" />
+                  <img alt="官网永久发布页" id="qrcode" style="width: 50%;" referrerpolicy="no-referrer" />
                 </div>
               </li>
               <div id="showContent">
@@ -696,10 +696,10 @@
                   <font color="red">付费站注册/忘记密码处</font>
                   <div class="link">
                     <div>
-                      <a href="https://www.happywebsite.buzz/#/creator" target="_blank"
+                      <a href="https://happyeveryday.pages.dev/#/creator" target="_blank"
                         style="color:#02a982">付费站忘记密码/注册</a>
                     </div>
-                    <div class="go"><a href="https://www.happywebsite.buzz/#/creator" target="_blank">点击进入</a>
+                    <div class="go"><a href="https://happyeveryday.pages.dev/#/creator" target="_blank">点击进入</a>
                     </div>
                   </div>
 
@@ -709,48 +709,37 @@
                   <font color="red">付费内容（主用）</font>
                   <div class="link">
                     <div>
-                      <a href="https://www.happywebsite.buzz/#/home/originvideo" target="_blank"
+                      <a href="https://happyeveryday.pages.dev/#/home/originvideo" target="_blank"
                         style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://www.happywebsite.buzz/#/home/originvideo" target="_blank">点击进入</a>
-                    </div>
-                  </div>
-
-                </li>
-
-                <li>
-                  <font color="blue">付费内容（备用1）</font>
-                  <div class="link">
-                    <div><a href="https://happywebsite.pages.dev/#/home/originvideo" target="_blank"
-                        style="color:#02a982">***</a>
-                    </div>
-                    <div class="go"><a href="https://happywebsite.pages.dev/#/home/originvideo" target="_blank">点击进入</a>
-                    </div>
-                  </div>
-
-                </li>
-
-                <li style="border-bottom:2px solid red ;">
-                  <font color="blue">付费内容（备用2）</font>
-                  <div class="link">
-                    <div><a href="https://happyoriginv.netlify.app/#/home/originvideo" target="_blank"
-                        style="color:#02a982">***</a>
-                    </div>
-                    <div class="go"><a href="https://happyoriginv.netlify.app/#/home/originvideo"
+                    <div class="go"><a href="https://happyeveryday.pages.dev/#/home/originvideo"
                         target="_blank">点击进入</a>
                     </div>
                   </div>
 
                 </li>
 
+                <li style="border-bottom:2px solid red ;">
+                  <font color="blue">付费内容（备用1）</font>
+                  <div class="link">
+                    <div><a href="https://happyeveryday.netlify.app/#/home/originvideo" target="_blank"
+                        style="color:#02a982">***</a>
+                    </div>
+                    <div class="go"><a href="https://happyeveryday.netlify.app/#/home/originvideo"
+                        target="_blank">点击进入</a>
+                    </div>
+                  </div>
+
+                </li>
 
                 <li>
                   <font color="OrangeRed">免费内容（主用）</font>
                   <div class="link">
                     <div>
-                      <a href="https://www.happywebsite.buzz/#/home/main" target="_blank" style="color:#02a982">***</a>
+                      <a href="https://happyeveryday.pages.dev/#/home/main" target="_blank"
+                        style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://www.happywebsite.buzz/#/home/main" target="_blank">点击进入</a>
+                    <div class="go"><a href="https://happyeveryday.pages.dev/#/home/main" target="_blank">点击进入</a>
                     </div>
                   </div>
 
@@ -760,69 +749,24 @@
                   <font color="blue">免费内容（备用1）</font>
                   <div class="link">
                     <div>
-                      <a href="https://happywebsite.pages.dev/#/home/main" target="_blank" style="color:#02a982">***</a>
-                    </div>
-                    <div class="go"><a href="https://happywebsite.pages.dev/#/home/main" target="_blank">点击进入</a>
-                    </div>
-                  </div>
-                </li>
-
-                <li>
-                  <font color="blue">免费内容（备用2）</font>
-                  <div class="link">
-                    <div>
-                      <a href="https://happyoriginv.netlify.app/#/home/main" target="_blank"
+                      <a href="https://happyeveryday.netlify.app/#/home/main" target="_blank"
                         style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://happyoriginv.netlify.app/#/home/main" target="_blank">点击进入</a>
+                    <div class="go"><a href="https://happyeveryday.netlify.app/#/home/main" target="_blank">点击进入</a>
                     </div>
                   </div>
                 </li>
 
 
-                <!-- <li>
-                  <font color="red">免费V（主用）</font>
-                  <div class="link">
-                    <div>
-                      <a href="https://www.happywebsite.buzz/onlineFreeV.html" target="_blank"
-                        style="color:#02a982">***</a>
-                    </div>
-                    <div class="go"><a href="https://www.happywebsite.buzz/onlineFreeV.html" target="_blank">点击进入</a>
-                    </div>
-                  </div>
 
-                </li>
 
-                <li>
-                  <font color="blue">免费V（备用1）</font>
-                  <div class="link">
-                    <div><a href="https://happywebsite.pages.dev/onlineFreeV" target="_blank"
-                        style="color:#02a982">***</a>
-                    </div>
-                    <div class="go"><a href="https://happywebsite.pages.dev/onlineFreeV" target="_blank">点击进入</a>
-                    </div>
-                  </div>
 
-                </li>
-
-                <li style="border-bottom:2px solid red ;">
-                  <font color="blue">免费V（备用2）</font>
-                  <div class="link">
-                    <div><a href="https://happyoriginv.netlify.app/onlineFreeV" target="_blank"
-                        style="color:#02a982">***</a>
-                    </div>
-                    <div class="go"><a href="https://happyoriginv.netlify.app/onlineFreeV" target="_blank">点击进入</a>
-                    </div>
-                  </div>
-
-                </li>
-                 -->
               </div>
               <li>
                 <h3 style="color: red;font-weight: bold;">温馨提示</h3>
                 <span style="color: blank;font-weight: bold;">1.使用浏览器打开本网页并收藏（重要）</span>
-                <span>2.付费内容的用到的<strong style="color: blank;font-weight: bold;">魔法工具</strong>主动问</span>
-                <span>3.都不要在微信直接点进去</span>
+
+                <strong>2.不要在微信直接点进去，切记</strong>
 
               </li>
 
@@ -852,7 +796,7 @@
     // document.getElementById('qrcode').setAttribute('src', 'https://www.dmxq.net/?qrcode=' + window.location);
     // document.getElementById('qrcode').setAttribute('src', 'https://api.isoyu.com/qr/?m=0&e=L&p=10&url=' + window.location);
     // document.getElementById('qrcode').setAttribute('src', 'https://api.qrserver.com/v1/create-qr-code/?size=200%C3%97200&margin=10&data=' + window.location);
-    document.getElementById('qrcode').setAttribute('src', 'https://telegraph-image-drl.pages.dev/file/9f293bbd8413398e2fba5.png');
+    document.getElementById('qrcode').setAttribute('src', 'https://wdcdn.qpic.cn/MTMxMDI2NjMzNTczMjg3NTc_918867_q_JDporB3sZRRCuo_1722245370');
   </script>
 
 </body>
