--- a/share.html
+++ b/share.html
@@ -36,7 +36,7 @@
     th,
     td {
       /* text-align: center; */
-      border: 1px solid pink;
+      border: 1px solid greenyellow;
 
     }
 
