--- a/index.html
+++ b/index.html
@@ -696,10 +696,10 @@
                   <font color="red">付费站注册/忘记密码处</font>
                   <div class="link">
                     <div>
-                      <a href="https://happyeveryday.pages.dev/#/creator" target="_blank"
+                      <a href="https://happyday3.pages.dev/#/creator" target="_blank"
                         style="color:#02a982">付费站忘记密码/注册</a>
                     </div>
-                    <div class="go"><a href="https://happyeveryday.pages.dev/#/creator" target="_blank">点击进入</a>
+                    <div class="go"><a href="https://happyday3.pages.dev/#/creator" target="_blank">点击进入</a>
                     </div>
                   </div>
 
@@ -709,10 +709,10 @@
                   <font color="red">付费内容（主用）</font>
                   <div class="link">
                     <div>
-                      <a href="https://happyeveryday.pages.dev/#/home/originvideo" target="_blank"
+                      <a href="https://happyday3.pages.dev/#/home/originvideo" target="_blank"
                         style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://happyeveryday.pages.dev/#/home/originvideo"
+                    <div class="go"><a href="https://happyday3.pages.dev/#/home/originvideo"
                         target="_blank">点击进入</a>
                     </div>
                   </div>
@@ -722,10 +722,10 @@
                 <li style="border-bottom:2px solid red ;">
                   <font color="blue">付费内容（备用1）</font>
                   <div class="link">
-                    <div><a href="https://happyeveryday.netlify.app/#/home/originvideo" target="_blank"
+                    <div><a href="https://happyday3.netlify.app/#/home/originvideo" target="_blank"
                         style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://happyeveryday.netlify.app/#/home/originvideo"
+                    <div class="go"><a href="https://happyday3.netlify.app/#/home/originvideo"
                         target="_blank">点击进入</a>
                     </div>
                   </div>
@@ -736,10 +736,10 @@
                   <font color="OrangeRed">免费内容（主用）</font>
                   <div class="link">
                     <div>
-                      <a href="https://happyeveryday.pages.dev/#/home/main" target="_blank"
+                      <a href="https://happyday3.pages.dev/#/home/main" target="_blank"
                         style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://happyeveryday.pages.dev/#/home/main" target="_blank">点击进入</a>
+                    <div class="go"><a href="https://happyday3.pages.dev/#/home/main" target="_blank">点击进入</a>
                     </div>
                   </div>
 
@@ -749,10 +749,10 @@
                   <font color="blue">免费内容（备用1）</font>
                   <div class="link">
                     <div>
-                      <a href="https://happyeveryday.netlify.app/#/home/main" target="_blank"
+                      <a href="https://happyday3.netlify.app/#/home/main" target="_blank"
                         style="color:#02a982">***</a>
                     </div>
-                    <div class="go"><a href="https://happyeveryday.netlify.app/#/home/main" target="_blank">点击进入</a>
+                    <div class="go"><a href="https://happyday3.netlify.app/#/home/main" target="_blank">点击进入</a>
                     </div>
                   </div>
                 </li>
