--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="Description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>官网永久发布页</title>
+  <link rel="shortcut icon" href="https://img.soogif.com/ssfHO3DY0V54NJCMpq9PrtKWmURQLi53.gif" type="image/x-icon">
   <meta name="keywords" content="官网永久发布页">
   <meta name="description" content="官网永久发布页">
   <style>
