--- a/share.html
+++ b/share.html
@@ -1,143 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>内容预览</title>
-  <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/4406/4406121.png" />
-  <!-- <script src="https://unpkg.com/react@18/umd/react.development.js"></script> -->
-  <script src="./js/react.development.js"></script>
-
-  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/react/18.2.0/cjs/react.development.js"></script> -->
-  <!-- <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
-  <script src="./js/react-dom.development.js"></script>
-
-  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/react-dom/18.2.0/cjs/react-dom.development.js"></script> -->
-
-  <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
-  <script src="./js/babel.min.js"></script>
-  <style>
-    body {
-      margin: 0 auto;
-    }
-
-    .title {
-      text-align: center;
-    }
-
-    table {
-      border: 1px solid red;
-      border-collapse: collapse;
-      width: 100%;
-      margin: 0 auto;
-    }
-
-    th,
-    td {
-      /* text-align: center; */
-      border: 1px solid greenyellow;
-
-    }
-
-    @media all and (min-width:800px) {
-      table {
-        border: 1px solid blue;
-        width: 35vw;
-      }
-
-      th,
-      td {
-        text-align: center;
-        border: 1px solid cornflowerblue;
-      }
-    }
-
-    .img-td {
-      width: 40%;
-    }
-
-    .img-td>img {
-      width: 100%;
-      vertical-align: top;
-    }
-
-
-
-    .updateContent-ul {
-      /* text-align: center; */
-      list-style: none;
-    }
-
-    .updateContent-li {
-      width: 100%;
-      /* background-color: pink; */
-      margin: 5px 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=https://flowus.cn/deme/share/14859d1a-9f91-4136-8c64-878baafdc6a8">
+    <title>找到我</title>
 </head>
-
 <body>
-  <div id="root"></div>
-  <script type="text/babel">
-    function MyApp() {
-      async function fetchData() {
-        const result = await fetch(`https://project2web.usemock.com/getsharelist`);
-        const txt = await result.text();
-        // console.log('txt :>> ', JSON.parse(txt));
-        setDatas(JSON.parse(txt));
-      }
-      const [datas, setDatas] = React.useState([]);
-      React.useEffect(() => {
-        fetchData()
-      }, [])
-      const strNum = "ABCDEFGHIJK";
-      const trlist = datas.map((item, index) => {
-        // console.log('item :>> ', item);
-        const liurl = item.updatecontent.map((aitem, aindex) => {
-          return < li className="updateContent-li" key={aitem}>
-            <a href={aitem} target="_blank">
-              {strNum[aindex]}组链接
-            </a>
-          </li >
-        })
-        return <tr key={index}>
-          <td>{item.updatetime}</td>
-          <td>
-            <ul className="updateContent-ul">
-              {liurl}
-            </ul>
-          </td>
-        </tr>
-      });
-
-
-      return (
-        <>
-          <h2 className="title">更新预览</h2 >
-          <table>
-            <thead>
-              <tr>
-                <th>更新日期</th>
-                <th>预览链接</th>
-              </tr>
-            </thead>
-            <tbody>
-              {trlist}
-            </tbody>
-          </table>
-        </>
-      );
-    }
-
-    const container = document.getElementById('root');
-    const root = ReactDOM.createRoot(container);
-    root.render(
-      <>
-        <MyApp />
-      </>);
-
-  </script>
+    <p>请稍等...</p>
 </body>
-
 </html>
