--- a/share.html
+++ b/share.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://flowus.cn/deme/share/14859d1a-9f91-4136-8c64-878baafdc6a8">
+    <meta http-equiv="refresh" content="0;url=https://www.baidu.com">
     <title>找到我</title>
 </head>
 <body>
